--- a/www/src/main/resources/templates/home.html
+++ b/www/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
   	<li><a href="/member/login">login</a></li>
   	<li><a href="/member/myPage">myPage</a></li>
   	<li><a href="/member/like">like</a></li>
-  	<li><a href="/board/announcement">announcement</a></li>
+  	<li><a href="/member/announcement">announcement</a></li>
   </ul>
   <hr>
 
