--- a/www/src/main/resources/templates/member/findID.html
+++ b/www/src/main/resources/templates/member/findID.html
@@ -11,7 +11,7 @@
   
   <form method="post">
   <p><input name="name" placeholder="이름"></p>
-  <p><input name="eamill" placeholder="eamil" type="email"></p>
+  <p><input name="eamil" placeholder="eamil" type="email"></p>
   
   <button>ID찾기</button>
   </form>
