--- a/www/src/main/resources/templates/home.html
+++ b/www/src/main/resources/templates/home.html
@@ -26,12 +26,14 @@
   	<tr>
   		<th>idx</th>
   		<th>userid</th>
+  		<th>userpw</th>
   		<th>nick</th>
   	</tr>
   	
   	<tr th:each="row : ${test}">
   		<td th:text="${row.accounts_idx}"></td>
   		<td th:text="${row.userid}"></td>
+  		<td th:text="${row.userpw}"></td>
   		<td th:text="${row.nick}"></td>
   	</tr>
   </table>
@@ -41,12 +43,25 @@
   
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a1a7717c2c3bc1327ef51412b55ac5ef"></script>
   <script>
-	  const container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
-	  let options = { //지도를 생성할 때 필요한 기본 옵션
-	  	center: new kakao.maps.LatLng(33.450701, 126.570667), //지도의 중심좌표.
-	  	level: 3 //지도의 레벨(확대, 축소 정도)
-	  };
-	  let map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
+     const container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
+     let options = { //지도를 생성할 때 필요한 기본 옵션
+        center: new kakao.maps.LatLng(35.1192845,128.7915767), //지도의 중심좌표.
+        level: 3 //지도의 레벨(확대, 축소 정도)
+     };
+     let map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
+     
+     
+      // 마커가 표시될 위치입니다 
+     var markerPosition  = new kakao.maps.LatLng(35.1192845,128.7915767); 
+
+     // 마커를 생성합니다
+     var marker = new kakao.maps.Marker({
+         position: markerPosition
+     });
+
+     // 마커가 지도 위에 표시되도록 설정합니다
+     marker.setMap(map);
+
   </script>
   
   <img th:src="@{/image/map.png}">
