--- a/www/src/main/resources/templates/member/findPW.html
+++ b/www/src/main/resources/templates/member/findPW.html
@@ -12,7 +12,7 @@
   <form method="post">
   <p><input name="userid" placeholder="ID"></p>
   <p><input name="name" placeholder="이름"></p>
-  <p><input name="eamill" placeholder="eamil" type="email"></p>
+  <p><input name="eamil" placeholder="eamil" type="email"></p>
   <button>PW찾기</button>
   </form>
   
