--- a/www/src/main/resources/templates/member/myPage.html
+++ b/www/src/main/resources/templates/member/myPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>마이페이지</title>
@@ -9,23 +9,23 @@
 <table>
   <tr>
      <th>회원번호</th>
-     <td>idx</td>
+     <td th:text="${session.user.accounts_idx}"></td>
   </tr>
   <tr>
      <th>아이디</th>
-     <td>userid</td>
+     <td th:text="${session.user.userid}"></td>
   </tr>
   <tr>
      <th>닉네임</th>
-     <td>nick</td>
+     <td th:text="${session.user.nick}"></td>
   </tr>
   <tr>
      <th>이메일</th>
-     <td>email</td>
+     <td th:text="${session.user.email}"></td>
   </tr>
   <tr>
-     <th>가입일</th>
-     <td>join_date</td>
+     <th>생년월일</th>
+     <td th:text="${session.user.birth}"></td>
   </tr>
 </table>
 
