고객지원 페이지, 아이디 중복 조금

--- a/www/src/main/resources/templates/home.html
+++ b/www/src/main/resources/templates/home.html
@@ -14,6 +14,7 @@
   	<li><a href="/member/myPage">myPage</a></li>
   	<li><a href="/member/like">like</a></li>
   	<li><a href="/member/announcement">announcement</a></li>
+  	<li><a href="/member/customer">customer</a></li>
   </ul>
   <hr>
 
