--- a/www/src/main/resources/templates/member/announcement.html
+++ b/www/src/main/resources/templates/member/announcement.html
@@ -13,13 +13,16 @@
 			<tbody>
 				<tr>
 					<th>No</th>
+					<th>닉네임</th>
 					<th>제목</th>
 					<th>계정 번호</th>
+
 					<th>작성일</th>
 					<th>조회수</th>
 				</tr>
 				<tr th:each="row : ${test}">
 					<td th:text="${row.announcement_idx}"></td>
+					<td th:text="${row.nick}"></td>
 					<td th:text="${row.title}"></td>
 					<td th:text="${row.a_idx}"></td>
 					<td th:text="${row.w_date}"></td>
