--- a/www/src/main/resources/templates/member/myPage.html
+++ b/www/src/main/resources/templates/member/myPage.html
@@ -30,12 +30,25 @@
 </table>
 
 <br>
-<a href="/member/update">
-  <button>수정</button>
-</a>
 
-<a></a>
+  <button>수정</button>
+
+
 <button>탈퇴</button>
 
+<script th:inline="javascript">
+    let btns = document.querySelectorAll('button');
+    
+    // 수정 버튼
+    btns[0].onclick = () => {
+      location.href = '/member/update';
+    };
+    
+    // 삭제 버튼
+    btns[1].onclick = () => {
+      // console.log([[${session.user.accounts_idx}]]);
+      location.href = '/member/delete/[[${session.user.accounts_idx}]]';
+    };
+  </script>
 </body>
 </html>
