--- a/www/src/main/resources/templates/home.html
+++ b/www/src/main/resources/templates/home.html
@@ -10,13 +10,18 @@
   
   <ul>
   	<li><a href="/member/signUp">signUp</a></li>
+  	<th:block th:if="${session.user == null}">
   	<li><a href="/member/login">login</a></li>
+  	</th:block>
+  	<th:block th:if="${session.user != null}">
+    <li><a href="/member/logout">logout</a></li>
+    </th:block>
   	<li><a href="/member/myPage">myPage</a></li>
   	<li><a href="/member/like">like</a></li>
   	<li><a href="/member/announcement">announcement</a></li>
   </ul>
   <hr>
-
+  
   <ol>
     <li th:text="${per.name}"></li>
     <li th:text="${per.age}"></li>
