--- a/www/src/main/resources/templates/member/findPW.html
+++ b/www/src/main/resources/templates/member/findPW.html
@@ -10,9 +10,9 @@
   <legend>PW찾기</legend>
  
   <form method="post">
-  <p><input name="userid" placeholder="ID"></p>
-  <p><input name="name" placeholder="이름"></p>
-  <p><input name="eamil" placeholder="eamil" type="email"></p>
+  <p><input name="userid" placeholder="ID" required></p>
+  <p><input name="name" placeholder="이름" required></p>
+  <p><input name="email" placeholder="email" type="email" required></p>
   <button>PW찾기</button>
   </form>
   
