--- a/www/src/main/resources/templates/member/signUp.html
+++ b/www/src/main/resources/templates/member/signUp.html
@@ -20,23 +20,26 @@
 
 			<div class="flex">
 				<label class="input-label"> <input id="userid" name="userid"
-					required placeholder="" type="text" class="input"> <span>아이디</span>
+					required placeholder="" type="text" class="input" onblur="checkUserid()"> <span>아이디</span>
 				</label>
-				<button type="button" class="check-btn" onclick="checkUserid()">중복
-					확인</button>
 			</div>
 
 			<div class="flex">
-				<label> <input name="nick" required placeholder=""
-					type="text" class="input"> <span>닉네임</span>
+				<label class="input-label"> <input id="nick" name="nick" 
+				required placeholder="" type="text" class="input" onblur="checkUserNick()"> <span>닉네임</span>
 				</label>
 			</div>
 
 			<label> <input name="userpw" required placeholder=""
 				type="password" class="input"> <span>비밀번호</span>
-			</label> <label> <input name="phone" required placeholder=""
-				type="text" class="input"> <span>전화번호</span>
-			</label> <label> <input name="birth" required placeholder=""
+			</label> 
+			
+			<div class="flex">
+			 <label class="input-label"> <input id="phone" name="phone" required placeholder=""
+				type="text" class="input" onblur="checkUserPhone()"> <span>전화번호</span>
+			</label> 
+			</div>
+			<label> <input name="birth" required placeholder=""
 				type="date" class="input"> <span>생년월일</span>
 			</label> <label> <input name="email" required placeholder=""
 				type="email" class="input"> <span>E-mail</span>
@@ -47,19 +50,47 @@
 
 		<script>
 			function checkUserid() {
+			  //'#userid'라는 아이디를 가진 HTML 입력 요소를 찾아서 그 값을 userid에 저장
 				let userid = document.querySelector("#userid").value;
-
 				console.log(userid);
-
-			  //db주소로 접근해서 queryselect로 넘겨줘서 맞는지 확인하고 다시 아이디를 가져와서 
-			  // 아이디창에 띄워주고 맞는지 아닌지 확인
+			  /*fetch API를 사용하여 아래 서버에 GET요청을 보낸다.(요청을 보낼 URL)
+			  여기서 userid는 사용자가 입력한 값이 추가된 쿼리 파라미터로, 서버에 전달
+			  '{method:"get"}은 get요청을 사용한다는 것을 지정한다'
+			  즉, 서버의 '/member/checkUserid'경로로 'userid'값을 쿼리로 전달하여
+			  사용자가 입력한 아이디가 데이터베이스에 존재하는지 확인하도록 한다.*/
 			  fetch("http://localhost:8080/member/checkUserid?userid=" + userid, {method:"get"})
+			  /*페치가 서버로부터 응답을 받으면 이 응답은 첫 번째 'then'에서 처리
+			  response는 서버의 응답 객체를 의미
+			  'reponse.json()은 응답 본문을 json형식으로 변환, 서버가 json형식으로데이터를 반환할 때 사용*/
 			  .then(response => response.json())
+			  /*두 번째 'then'은 json으로 변환된 데이터를 받아서 처리
+			  data는 서버에서 반환한 json객체를 나타냄
+			  alert(data.name)은 서버에서 받은 data객체의 name속성을 알림창으로 표시한다.
+			  */
 			  .then(data => {
 				alert(data.name);
 			  })
-
 			}
+			
+			function checkUserNick(){
+
+				let userNick = document.querySelector("#nick").value;
+				console.log(userNick);
+				fetch("http://localhost:8080/member/checkUserNick?userNick=" + userNick, {method:"get"})
+				.then(response => response.json())
+				.then(data => {
+	        alert(data.nick);
+	        })
+
+	    } 
+			 function checkUserPhone(){
+			  let phone = document.querySelector('#phone').value;
+			  fetch("http://localhost:8080/member/checkUserPhone?phone=" + phone, {method:"get"})
+			  .then(response => response.json())
+          .then(data => {
+            alert(data.phone);
+          })
+			} 
 		</script>
 
 	</div>
