마커여러개띄우기

--- a/www/src/main/resources/templates/place/mapAPI.html
+++ b/www/src/main/resources/templates/place/mapAPI.html
@@ -7,88 +7,86 @@
 <body>
 
 	<table>
-  	<tr>
-  		<th>like_idx</th>
-  		<th>a_idx</th>
-  		<th>place_idx</th>
-  		<th>place_name</th>
-  		<th>place_add</th>
-  		<th>place_x</th>
-  		<th>place_y</th>
-  		<th>relocation</th>
-  	</tr>
-  	
-  	<tr th:each="row : ${mapAPI}">
-  		<td th:text="${row.like_idx}"></td>
-  		<td th:text="${row.a_idx}"></td>
-  		<td th:text="${row.p_idx}"></td>
-  		<td th:text="${row.place_name}"></td>
-  		<td th:text="${row.place_add}"></td>
-  		<td th:text="${row.place_x}"></td>
-  		<td th:text="${row.place_y}"></td>
-  		<td>
-  			<input type="checkbox" th:onclick="'updateMapCoordinates(' + ${row.place_x} + ', ' + ${row.place_y} + ')'">
-  		</td>
-  		<td>
-  			<button th:onclick="'updateMapCoordinates(' + ${row.place_x} + ', ' + ${row.place_y} + ')'">
-  				replace
-  			</button>
-  		</td>
-  	</tr>
-  </table>
-  
-  <hr>
+		<tr>
+			<th>like_idx</th>
+			<th>a_idx</th>
+			<th>place_idx</th>
+			<th>place_name</th>
+			<th>place_add</th>
+			<th>place_x</th>
+			<th>place_y</th>
+			<th>relocation</th>
+		</tr>
+
+		<tr th:each="row : ${mapAPI}">
+			<td th:text="${row.like_idx}"></td>
+			<td th:text="${row.a_idx}"></td>
+			<td th:text="${row.p_idx}"></td>
+			<td th:text="${row.place_name}"></td>
+			<td th:text="${row.place_add}"></td>
+			<td th:text="${row.place_x}"></td>
+			<td th:text="${row.place_y}"></td>
+			<td><input type="checkbox"
+				th:onclick="'updateMapCoordinates(' + ${row.place_x} + ', ' + ${row.place_y} + ')'">
+			</td>
+			<td>
+				<button
+					th:onclick="'updateMapCoordinates(' + ${row.place_x} + ', ' + ${row.place_y} + ')'">
+					replace</button>
+			</td>
+		</tr>
+	</table>
+
+	<hr>
 
 	<div id="map" style="width:600px; height:400px;"></div>
   
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a1a7717c2c3bc1327ef51412b55ac5ef"></script>
   
 	<script>
-	
-  	// 초기 좌표
-		let centerLat = 35.1192845;
-		let centerLng = 128.7915767;
-		let markerLat = 35.1192845;
-		let markerLng = 128.7915767;
-	
-		// 지도 생성
-		const container = document.getElementById('map');
-		let map = new kakao.maps.Map(container, {
-	    center: new kakao.maps.LatLng(centerLat, centerLng),
-	    level: 3
-		});
-	
-		// 마커 생성
-		let marker = new kakao.maps.Marker({
-	    position: new kakao.maps.LatLng(markerLat, markerLng)
-		});
-		marker.setMap(map);
-	
-		// 좌표 업데이트 함수
-		function updateMapCoordinates(newCenterLat, newCenterLng) {
-	    // 새로운 좌표로 지도 중심 업데이트
-	    map.setCenter(new kakao.maps.LatLng(newCenterLat, newCenterLng));
-	
-	    // 마커 위치 업데이트
-	    marker.setPosition(new kakao.maps.LatLng(newCenterLat, newCenterLng));
-	
-	    // 변수 업데이트
-	    centerLat = newCenterLat;
-	    centerLng = newCenterLng;
-	    markerLat = newCenterLat;
-	    markerLng = newCenterLng;
+		var mapContainer = document.getElementById('map'), // 지도를 표시할 div  
+		mapOption = {
+			center : new kakao.maps.LatLng(35.181431, 128.9464563), // 지도의 중심좌표
+			level : 5
+		// 지도의 확대 레벨
+		};
+
+		var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+		// 마커를 표시할 위치와 title 객체 배열입니다 
+		var positions = [ {
+			title : '소백이네',
+			latlng : new kakao.maps.LatLng(35.1192845, 128.7915767)
+		}, {
+			title : '학원',
+			latlng : new kakao.maps.LatLng(35.1670413, 129.1328838)
+		}, {
+			title : '민지네',
+			latlng : new kakao.maps.LatLng(35.166423, 129.113169)
+		} ];
+
+		for (var i = 0; i < positions.length; i++) {
+		    // 마커 생성
+		    var marker = new kakao.maps.Marker({
+		        map: map, // 마커를 표시할 지도
+		        position: positions[i].latlng, // 마커를 표시할 위치
+		        title : positions[i].title // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
+		    });
 		}
-	
-		// 버튼 클릭 시 좌표 업데이트
-		function updateMapCoordinatesFromButton(button) {
-			var x = button.getAttribute('data-x');
-			var y = button.getAttribute('data-y');
-			console.log('Updating map coordinates to:', x, y);
-			updateMapCoordinates(parseFloat(y), parseFloat(x));  // y가 위도, x가 경도로 사용
-		}
+		
+		// 지도 좌표를 업데이트하는 함수 정의
+	    function updateMapCoordinates(x, y) {
+	        var newPosition = new kakao.maps.LatLng(y, x);
+	        map.setCenter(newPosition); // 지도의 중심을 새로운 좌표로 이동합니다
+	        var marker = new kakao.maps.Marker({
+	            position: newPosition,
+	            map: map
+	        });
+	    }
+		
 	</script>
 
-  
+
 
 </body>
 </html>
