상세페이지

--- a/www/src/main/resources/templates/home.html
+++ b/www/src/main/resources/templates/home.html
@@ -49,6 +49,7 @@
 			  <a href="/member/like">like</a><br>
 			  <a href="/place/mapAPI">mapAPI</a><br>
         <a href="/member/customer">customer</a>
+        <a href="/member/detail">상세페이지</a>
 			</span>
 		</div>
 	</div>
