--- a/www/src/main/resources/templates/member/like.html
+++ b/www/src/main/resources/templates/member/like.html
@@ -10,98 +10,88 @@
 	<div class="container">
 
 		<div class="left">
-			<div class="all">전체선택</div>
 			<br>
 			<div class="location-item" th:each="row : ${mapAPI}">
 				<div class="image-box">
 					<img id="place_img"
 						th:src="@{/image/{placeImg}(placeImg=${row.place_img})}" />
 				</div>
+				
 				<div class="text-box">
 					<div class="location-name" th:text="${row.place_name}"></div>
 					<div class="location-detail" th:text="${row.place_add}"></div>
 				</div>
-
-				<div>
-        	<input type="checkbox" th:onclick="'updateMapCoordinates(' + ${row.place_x} + ', ' + ${row.place_y} + ')'">
-
+				
+				<div class="con-like">
+					<input class="like" type="checkbox" title="like" th:onclick="|toggleMarker(this,${row.place_x},${row.place_y})|">
+					<div class="checkmark">
+						<svg xmlns="http://www.w3.org/2000/svg" class="outline"
+							viewBox="0 0 24 24">
+      <path
+								d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Zm-3.585,18.4a2.973,2.973,0,0,1-3.83,0C4.947,16.006,2,11.87,2,8.967a4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,11,8.967a1,1,0,0,0,2,0,4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,22,8.967C22,11.87,19.053,16.006,13.915,20.313Z"></path>
+    </svg>
+						<svg xmlns="http://www.w3.org/2000/svg" class="filled"
+							viewBox="0 0 24 24">
+      <path
+								d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Z"></path>
+    </svg>
+						<svg xmlns="http://www.w3.org/2000/svg" height="100" width="100"
+							class="celebrate">
+      <polygon class="poly" points="10,10 20,20"></polygon>
+      <polygon class="poly" points="10,50 20,50"></polygon>
+      <polygon class="poly" points="20,80 30,70"></polygon>
+      <polygon class="poly" points="90,10 80,20"></polygon>
+      <polygon class="poly" points="90,50 80,50"></polygon>
+      <polygon class="poly" points="80,80 70,70"></polygon>
+    </svg>
+					</div>
 				</div>
+				
 			</div>
 		</div>
 	</div>
 
 
-	<hr>
 
-	<div class="right">
-		<div id="map" style="width: 900px; height: 800px;"></div>
-	</div>
+
+
+	<div id="map" style="width: 900px; height: 900px;"></div>
 
 	<script type="text/javascript"
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a1a7717c2c3bc1327ef51412b55ac5ef"></script>
 
 	<script>
-        // 초기 좌표
-        let centerLat = 35.1192845;
-        let centerLng = 128.7915767;
-        let markerLat = 35.1192845;
-        let markerLng = 128.7915767;
+      var mapContainer = document.getElementById('map'), // 지도를 표시할 div  
+      mapOption = {
+         center : new kakao.maps.LatLng(35.181431, 128.9464563), // 지도의 중심좌표
+         level : 5
+      // 지도의 확대 레벨
+      };
 
-        // 지도 생성
-        const container = document.getElementById('map');
-        let map = new kakao.maps.Map(container, {
-            center: new kakao.maps.LatLng(centerLat, centerLng),
-            level: 3
-        });
+      var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+  
+  
+      var markers = {}; // 마커를 저장할 객체 (key-value pair로 관리)
 
-        // 마커 생성
-        let marker = new kakao.maps.Marker({
-            position: new kakao.maps.LatLng(markerLat, markerLng)
-        });
-        marker.setMap(map);
+      function toggleMarker(check, x, y) {
+          var key = x + ',' + y; // x,y 좌표를 문자열로 결합하여 키로 사용
 
-        // 좌표 업데이트 함수
-        function updateMapCoordinates(newCenterLat, newCenterLng) {
-            // 새로운 좌표로 지도 중심 업데이트
-            map.setCenter(new kakao.maps.LatLng(newCenterLat, newCenterLng));
-
-            // 마커 위치 업데이트
-            marker.setPosition(new kakao.maps.LatLng(newCenterLat, newCenterLng));
-
-            // 변수 업데이트
-            centerLat = newCenterLat;
-            centerLng = newCenterLng;
-            markerLat = newCenterLat;
-            markerLng = newCenterLng;
-        }
-
-       // 체크박스 클릭 시 좌표 업데이트 함수
-        function updateMapCoordinatesFromCheckbox(checkbox) {
-            var x = checkbox.getAttribute('data-x');
-            var y = checkbox.getAttribute('data-y');
-            console.log('Updating map coordinates to:', x, y);
-            if (x && y) {
-                updateMapCoordinates(parseFloat(y), parseFloat(x));  // y가 위도, x가 경도로 사용
-            } else {
-                console.error('Invalid coordinates:', x, y);
-            }
-        }
-
-    </script>
-
-
-	<!-- <script>
-$(document).ready(function() {
-$("input:checkbox").on('click', function() {
-      if ( $(this).prop('checked') ) {
-        $(this).parent().addClass("selected");
-      } else {
-        $(this).parent().removeClass("selected");
+          if (check.checked) {
+              var marker = new kakao.maps.Marker({
+                  position: new kakao.maps.LatLng(x, y),
+                  map: map
+              });
+              markers[key] = marker; // 마커를 객체에 저장
+          } else {
+              if (markers[key]) {
+                  markers[key].setMap(null); // 마커를 지도에서 제거
+                  delete markers[key]; // 객체에서 마커 삭제
+              }
+          }
       }
-    });
-});
-</script> -->
-
+      
+    
+  </script>
 
 </body>
 </html>
