Api데이터 db에 추가하기

--- a/www/src/main/resources/templates/member/like.html
+++ b/www/src/main/resources/templates/member/like.html
@@ -23,8 +23,7 @@
 				</div>
 
 				<div>
-        	<input type="checkbox" th:onclick="'updateMapCoordinates(' + ${row.place_x} + ', ' + ${row.place_y} + ')'">
-
+        	<input type="checkbox" th:onclick="|toggleMarker(this,${row.place_x},${row.place_y})|">
 				</div>
 			</div>
 		</div>
@@ -33,74 +32,38 @@
 
 	<hr>
 
-	<div class="right">
-		<div id="map" style="width: 900px; height: 800px;"></div>
-	</div>
+   <div id="map" style="width:900px; height:600px;"></div>
+  
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a1a7717c2c3bc1327ef51412b55ac5ef"></script>
+  
+   <script>
+      var mapContainer = document.getElementById('map'), // 지도를 표시할 div  
+      mapOption = {
+         center : new kakao.maps.LatLng(35.181431, 128.9464563), // 지도의 중심좌표
+         level : 5
+      // 지도의 확대 레벨
+      };
 
-	<script type="text/javascript"
-		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a1a7717c2c3bc1327ef51412b55ac5ef"></script>
+      var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+  
+  
+      var markers = []; // 마커를 저장할 배열
+      
+      function toggleMarker(check,x,y){
 
-	<script>
-        // 초기 좌표
-        let centerLat = 35.1192845;
-        let centerLng = 128.7915767;
-        let markerLat = 35.1192845;
-        let markerLng = 128.7915767;
-
-        // 지도 생성
-        const container = document.getElementById('map');
-        let map = new kakao.maps.Map(container, {
-            center: new kakao.maps.LatLng(centerLat, centerLng),
-            level: 3
-        });
-
-        // 마커 생성
-        let marker = new kakao.maps.Marker({
-            position: new kakao.maps.LatLng(markerLat, markerLng)
-        });
-        marker.setMap(map);
-
-        // 좌표 업데이트 함수
-        function updateMapCoordinates(newCenterLat, newCenterLng) {
-            // 새로운 좌표로 지도 중심 업데이트
-            map.setCenter(new kakao.maps.LatLng(newCenterLat, newCenterLng));
-
-            // 마커 위치 업데이트
-            marker.setPosition(new kakao.maps.LatLng(newCenterLat, newCenterLng));
-
-            // 변수 업데이트
-            centerLat = newCenterLat;
-            centerLng = newCenterLng;
-            markerLat = newCenterLat;
-            markerLng = newCenterLng;
-        }
-
-       // 체크박스 클릭 시 좌표 업데이트 함수
-        function updateMapCoordinatesFromCheckbox(checkbox) {
-            var x = checkbox.getAttribute('data-x');
-            var y = checkbox.getAttribute('data-y');
-            console.log('Updating map coordinates to:', x, y);
-            if (x && y) {
-                updateMapCoordinates(parseFloat(y), parseFloat(x));  // y가 위도, x가 경도로 사용
-            } else {
-                console.error('Invalid coordinates:', x, y);
-            }
-        }
-
-    </script>
+        if(check.checked){
+          var marker = new kakao.maps.Marker({
+                  position: new kakao.maps.LatLng(x, y),
+                  map: map
+              });
+              markers.push(marker);
+        }else{
+          alert('체크해제')
+          }
+       }
+   </script>
 
 
-	<!-- <script>
-$(document).ready(function() {
-$("input:checkbox").on('click', function() {
-      if ( $(this).prop('checked') ) {
-        $(this).parent().addClass("selected");
-      } else {
-        $(this).parent().removeClass("selected");
-      }
-    });
-});
-</script> -->
 
 
 </body>
