--- a/www/src/main/resources/templates/member/signUp.html
+++ b/www/src/main/resources/templates/member/signUp.html
@@ -48,11 +48,15 @@
 			<button class="submit">회원가입</button>
 		</form>
 
-		<script>
+		<script>//서버 통신 코드
+		
+	   let alertUseridShown = false; //아이디 알림창 떴는지 추적변수
+	   
 			function checkUserid() {
-			  //'#userid'라는 아이디를 가진 HTML 입력 요소를 찾아서 그 값을 userid에 저장
+			  //'#userid'라는 HTML 입력 요소를 찾아서 그 값을 userid에 저장
+			  //사용자가 입력한 아이디를 가져옴
 				let userid = document.querySelector("#userid").value;
-				console.log(userid);
+				
 			  /*fetch API를 사용하여 아래 서버에 GET요청을 보낸다.(요청을 보낼 URL)
 			  여기서 userid는 사용자가 입력한 값이 추가된 쿼리 파라미터로, 서버에 전달
 			  '{method:"get"}은 get요청을 사용한다는 것을 지정한다'
@@ -67,11 +71,17 @@
 			  data는 서버에서 반환한 json객체를 나타냄
 			  alert(data.name)은 서버에서 받은 data객체의 name속성을 알림창으로 표시한다.
 			  */
-			  .then(data => {
-				alert(data.name);
-			  })
+ 			  .then(data => {
+ 			  	//알림창이 뜬 적 없고, 서버에서 받은 데이터에 name이 있으면,
+ 			     if(!alertUseridShown && data.name){ 
+ 			    	  alert(data.name);
+ 			    	 alertUseridShown = true; //알림창이 떴다고 상태 바꿔줌
+ 			      }
+			  });
 			}
 			
+		  let alertNickShown = false;
+	   
 			function checkUserNick(){
 
 				let userNick = document.querySelector("#nick").value;
@@ -79,16 +89,24 @@
 				fetch("http://localhost:8080/member/checkUserNick?userNick=" + userNick, {method:"get"})
 				.then(response => response.json())
 				.then(data => {
+				  if(!alertNickShown && data.nick){
 	        alert(data.nick);
-	        })
+	        alertNickShown = true;
+	        }
+				});
 
 	    } 
+			
+			let alertPhoneShown = false; 
+			
 			 function checkUserPhone(){
 			  let phone = document.querySelector('#phone').value;
 			  fetch("http://localhost:8080/member/checkUserPhone?phone=" + phone, {method:"get"})
 			  .then(response => response.json())
           .then(data => {
+            if(!alertPhoneShown && data.phone)
             alert(data.phone);
+            alertPhoneShown = true;
           })
 			} 
 		</script>
