--- a/www/src/main/resources/templates/member/customer.html
+++ b/www/src/main/resources/templates/member/customer.html
@@ -88,11 +88,16 @@
 					<tr>
 						<th>No</th>
 						<th>제목</th>
+						<th>닉네임</th>
 						<th>내용</th>
 						<th>작성시간</th>
 					</tr>
 					<tr th:each="row : ${test}">
 						<td th:text="${row.board_idx}"></td>
+						<td>
+						  <a th:href="@{/member/csView/{board_idx}(board_idx=${row.board_idx})}" th:text="${row.title}"></a>
+						</td>
+						<td th:text="${row.nick}"></td>
 						<td th:text="${row.title}"></td>
 						<td th:text="${row.content}"></td>
 						<td th:text="${row.create_at}"></td>
